Test v3 on Sonar (#1976)
* updated libraries and version numbers

* update runtime module security access to classes

* updated word cloud project properties

* updated jogl jar links

* fixed build xml

* downgraded controlsfx version due to bug

* Added Nashorn dependency

* fixed broken unit tests

* Fix Graph Framework and Graph Utilities tests

* Updated Constellation LAF settings for Windows FlatView in Netbeans 20

* updated geotools library version, fixed broken utilities unit tests

* Fixed Look and Feel unit test

* Fix unit tests and equalsverifier dependency

* Fixed DAV unit tests

* fixed plugin framework unit test, updated list asserts to use assertj

* removed unneeded assert

* Added module security entry for a unit test

* Fixed CoreUtilities unit test - ShapeNGTest

* Fixed unit test and module security.

* Remove breaking analytic unit test

* removed majority of deprecated URL constructor use

* updated dependencies

* Unit test fixes

* updated libraries, readme for netbeans 21

* updated netbeans-runner

* minor update to dockerfile

* Update unit test args

* Use jogamp 2.4 due to Linux issue with version 2.5

* attempt to fix sonar runner

* Update netbeans link

* Change tag to 21

* updated jacoco to version compatible with java 21

* updated runner versions

* fixed dockerfile error

* Test some more module security changes.

* Another module security setting

* Temp fix for CI testing to progress further

* Updated sonar scanner client version used in the netbeans runner

* Update Ubuntu version

* updated image version

* updated readme

* Modified unit test.

* Fix code smells

---------

Co-authored-by: antares1470 <62311243+antares1470@users.noreply.github.com>
Co-authored-by: OrionsGuardian <oriondominus@gmail.com>